[gd_scene load_steps=5 format=2]

[ext_resource path="res://FirstPerson.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 1.5

[sub_resource type="CubeMesh" id=3]

[node name="FirstPerson" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.946702, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.475457, 0 )

[node name="ColorRect" type="ColorRect" parent="Head/Camera"]
margin_left = 958.0
margin_top = 538.0
margin_right = 962.0
margin_bottom = 542.0
color = Color( 1, 0, 0, 1 )

[node name="AimCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Gun" type="MeshInstance" parent="Head/Camera"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0.345418, -0.265718, -0.476136 )
mesh = SubResource( 3 )

[node name="Muzzle" type="Spatial" parent="Head/Camera/Gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.11396 )

[node name="HeadBonker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.466635, 0 )
enabled = true
cast_to = Vector3( 0, 1, 0 )

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="SprintTimer" to="." method="_on_SprintTimer_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_AbilityTimer_timeout"]
